# Determinant

./: .gitignore  README.md  pyproject.toml
src/Matrix_Calculator/: Classes.py  Config.py  Data.py  Systems.py  User.py  main.py  main_page.py  texts.py
src/Matrix_Calculator/Add_matrixes/: main.py
src/Matrix_Calculator/Determinant/: __init__.py
