[tool.poetry]
name = "Matrix_Calculator"
version = "0.1.0"
description = ""
authors = ["AlkTagar <r0gozinmax@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
