[tool.poetry]
name = "matrix_calculator"
version = "0.1.0"
description = ""
authors = ["AlkTagar <r0gozinmax@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
